# rustpl

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  docker_build.sh  release.sh  test.sh  test_json.sh
samples/: data.json  header.tpl  main.tpl  test.tpl
src/: error.rs  main.rs  template.rs  vars.rs
