[package]
name = "rustpl"
version = "0.1.1"
edition = "2024"
description = "Template rendering cli tool"
authors = ["Kirill Lebedev (https://github.com/klebed/)"]
repository = "https://github.com/klebed/rustpl"
license = "MIT"
readme = "Readme.md"
categories = ["command-line-utilities", "template-engine"]
publish = true


[dependencies]
clap = { version = "~4.5", features = ["derive"] }
serde = { version = "~1.0" }
serde_json = "~1.0"
tera = { version = "~1", default-features = false }
tracing = "~0.1"
tracing-subscriber = "~0.3"


[profile.release]
opt-level = 3
lto = true
overflow-checks = true